--- a/elements/Category_Cards/default.css
+++ b/elements/Category_Cards/default.css
@@ -5,6 +5,18 @@
   gap: 25px;
 }
 
+@media screen and (max-width: 1023px) {
+  .breakdance .rayz_category-loop-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .breakdance .rayz_category-loop-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .breakdance .rayz_category-loop-wrapper .rayz_cat_block {
   display: flex;
   gap: 15px;
@@ -16,6 +28,20 @@
   border-radius: 15px;
   border-bottom: 5px solid grey;
   text-decoration: none;
+}
+
+.breakdance .rayz_category-loop-wrapper .rayz_cat_block .rayz_img-container img {
+  object-fit: contain;
+  aspect-ratio: 1 / 1;
+  max-width: 300px;
+  max-height: 300px;
+}
+
+.breakdance .rayz_category-loop-wrapper .rayz_cat_block .rayz_img-container {
+  background-color: white;
+  max-width: 300px;
+  max-height: 300px;
+  overflow: hidden;
 }
 
 .breakdance .rayz_category-loop-wrapper .rayz_cat_block h2 {
